--- a/components/header/Header.scss
+++ b/components/header/Header.scss
@@ -37,7 +37,7 @@
 .mail {
   width: 50px;
   height: 50px;
-  background-color: #000000;
+  background-color: #fca311;
   display: flex;
   justify-content: center;
   align-items: center;
