--- a/components/footer/Footer.scss
+++ b/components/footer/Footer.scss
@@ -24,3 +24,19 @@
     }
   }
 }
+
+@media screen and (max-width: 52em) {
+  .footer {
+    padding-left: 0;
+    border-left: none;
+    ul {
+      justify-content: flex-start;
+      align-items: flex-end;
+      padding: 3vh 0;
+      li {
+        padding-right: 15px;
+        font-size: 1.15rem;
+      }
+    }
+  }
+}
