--- a/components/footer/Footer.scss
+++ b/components/footer/Footer.scss
@@ -5,7 +5,7 @@
   right: 0;
   top: 0;
   height: 100vh;
-  border-left: 1.5px solid rgba(0, 0, 0, 0.1);
+  border-left: 1px solid rgba(255, 255, 255, 0.15);
   padding-left: 30px;
   ul {
     height: 100vh;
@@ -18,6 +18,7 @@
       padding-right: 30px;
       font-size: 1.3rem;
       font-weight: 800;
+      color: #ffffff;
       &:hover {
         cursor: pointer;
       }
@@ -25,8 +26,9 @@
   }
 }
 
-@media screen and (max-width: 52em) {
+@media screen and (max-width: 62em) {
   .footer {
+    position: relative;
     padding-left: 0;
     border-left: none;
     ul {
@@ -35,7 +37,7 @@
       padding: 3vh 0;
       li {
         padding-right: 15px;
-        font-size: 1.15rem;
+        line-height: 2rem;
       }
     }
   }
